# rsbox

./: README.md  changelog.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
src/rsbox/: data.py  example.py  misc.py  ml.py  ml_utils.py
