[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsbox"
version = "0.0.5"
authors = [
  { name="Rohan Sikand", email="rsikand29@gmail.com" },
]
description = "A toolbox of utility functions I commonly use when programming in Python."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rosikand/rsbox"
